# real-time-waf-rust

./: .gitignore  Cargo.toml  DEPLOYMENT.md  LICENSE  README.md  config.toml  nginx.conf
examples/: inspector.rs  rules.rs  server.rs  simple_main.rs
real-time-waf-rust/: LICENSE
src/: config.rs  lib.rs  main.rs  proxy.rs  utils.rs
src/waf/: inspector.rs  logger.rs  middleware.rs  mod.rs  rules.rs
tests/: integration_test.rs
