[package]
name = "waf-rust"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "Production-ready Web Application Firewall in Rust"
license = "MIT"

# Optimize for performance and security
[profile.release]
opt-level = 3        # Maximum optimization
lto = true           # Link Time Optimization
codegen-units = 1    # Better optimization at cost of compile time
panic = "abort"      # Remove unwind symbols for smaller binary
strip = true         # Strip symbols from binary

[dependencies]
# HTTP Server Framework
# Uses "4" to get latest stable with safe defaults
actix-web = "4"

# HTTP Client for Proxying
# "json" for API calls, "stream" for efficient body forwarding
reqwest = { version = "0.11", features = ["json", "stream"] }

# Async Runtime
# "full" required for Actix IO and timers
tokio = { version = "1", features = ["full"] }

# Serialization
# "derive" needed for config structs
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
# "release_max_level_info" could be used to compile out debug logs
log = "0.4"
env_logger = "0.10"

# Configuration
config = "0.13"

# Detection Engine
# "1" is stable; regex is the core of our rule engine
regex = "1"

# Timestamps
# "serde" feature allows serializing DateTime directly to JSON logs
chrono = { version = "0.4", features = ["serde"] }

# Utilities
futures-util = "0.3"
urlencoding = "2"
uuid = { version = "1.20.0", features = ["serde", "v4"] }
once_cell = "1.21.3"
